--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
           <li><a href="#">Services</a></li>
           <li><a href="#">Product</a></li>
           <li><a href="#">Contact</a></li>
-
-          <button type="button">Register</button>
         </ul>
+        <button type="button">Register</button>
       </nav>
     </header>
     <section class="hero">
@@ -145,7 +144,25 @@
 
       <button type="button">See More Product</button>
     </section>
-    <section></section>
+    <section>
+      <!-- <h2>mobile version</h2> -->
+      <img src="#" alt="#" />
+      <img src="#" alt="#" />
+      <img src="#" alt="#" />
+      <p>Simple Way To Order Your Foods</p>
+      <a href="#">
+        <p>GET IN ON</p>
+        <p>Google Play</p>
+      </a>
+      <a href="#">
+        <p>Download on the</p>
+        <p>Apple Store</p>
+      </a>
+    </section>
+    <section>
+      <img src="#" alt="#" />
+      <h2>Testimonials</h2>
+      <p>Our Happy Client Says</p>
+    </section>
   </body>
 </html>
-ss
