--- a/index.html
+++ b/index.html
@@ -163,6 +163,84 @@
       <img src="#" alt="#" />
       <h2>Testimonials</h2>
       <p>Our Happy Client Says</p>
+
+      <h3>Williams Johon</h3>
+      <p>CEO & Co-Founder</p>
+      <p>
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor."
+      </p>
+
+      <a href="#">
+        <img src="#" alt="#" />
+      </a>
+      <a href="">
+        <img src="#" alt="#" />
+      </a>
+
+      <img src="#" alt="котлеты с блинами" />
     </section>
+    <section>
+      <img src="#" alt="#" />
+      <img src="#" alt="#" />
+
+      <h2>Subcribe To Our Newsletter</h2>
+      <p>
+        Email subsription is an opportunity to recevie an interting newsletter
+        from a website. once a user fills in the subscription from on a website.
+      </p>
+      <input type="text" />\
+      <button>SUBCRIBE</button>
+    </section>
+
+    <footer>
+      <a href="#">
+        <img src="#" alt="логотип" />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt.
+        </p>
+        <ul>
+          <li>
+            <img src="" alt="" />
+          </li>
+          <li>
+            <img src="" alt="" />
+          </li>
+          <li>
+            <img src="" alt="" />
+          </li>
+          <li>
+            <img src="" alt="" />
+          </li>
+        </ul>
+      </a>
+      <ul>
+        <li>
+          <h2>Opening Restaurant</h2>
+          <p>
+            Sa - We: 09:00am - 10:00pm Thursday: 09:00am - 05:00pm Friday:
+            Closed
+          </p>
+        </li>
+        <li>
+          <h2>User Link</h2>
+          <p>
+            About Us Contact Us Order Delivery Payment & Tax Terms of Services
+          </p>
+        </li>
+        <li>
+          <h2>Contact Us</h2>
+          <p>543 Country Club Ave, NC 27587, London, UK +1259 6541120</p>
+        </li>
+      </ul>
+
+      <input type="text" />
+      <button></button>
+
+      <p>Copyrights© 2021 Food Bill All rights reserved.</p>
+    </footer>
   </body>
 </html>
